# cargo-workspaces

./: Cargo.toml
src/: main.rs  util.rs
src/commands/: init.rs  list.rs  new.rs
src/util/: error.rs
