[package]
name = "cargo-workspaces"
version = "0.1.0"
edition = "2021"
description = "simple managed workspace"

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
dunce = "1.0.5"
git2 = "0.19.0"
thiserror = "1.0.63"
toml_edit = "0.22.20"
